--- a/app/src/main/res/menu/menu_memo_detail.xml
+++ b/app/src/main/res/menu/menu_memo_detail.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.megaloma.memopad.MemoDetailActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_settings_memo_detail"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_delete"
         app:showAsAction="never" />
 </menu>
