メイン画面のソート順や詳細画面の表示を修正

--- a/app/src/main/res/layout/content_memo_detail.xml
+++ b/app/src/main/res/layout/content_memo_detail.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:text="@string/title"
+            android:hint="@string/title"
             android:textSize="20sp"
             android:autofillHints="タイトル"
             android:inputType=""
@@ -35,7 +35,7 @@
             android:layout_marginTop="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:text="@string/large_text"
+            android:hint="@string/large_text"
             android:textSize="20sp"
             android:autofillHints="メモ内容"
             android:inputType=""
